# ocpndebugger_pi

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README  appveyor.yml  ocpndebugger.fbp
buildosx/InstallOSX/: ocpndebugger_pi.pkgproj.in
debian/: changelog  control  copyright
manual/: antora.yml  site.yml
manual/debugger/: site.yml
po/: POTFILES.in  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  el.po  el_GR.po  es.po  et.po  fi.po  fr.po  fr_FR.po  gl.po  gl_ES.po  hu.po  it.po  ja.po  nb.po  nb_NO.po  nl.po  nl_NL.po  ocpndebugger_pi.pot  pl.po  pl_PL.po  pt.po  ru.po  ru_RU.po  sv.po  tr.po  vi.po  vi_VN.po  zh.po  zh_TW.po
src/: icons.bat  icons.cpp  icons.h  ocpn_plugin.h  ocpndebugger_pi.cpp  ocpndebugger_pi.h  ocpndebuggergui.cpp  ocpndebuggergui.h  ocpndebuggergui_impl.cpp  ocpndebuggergui_impl.h
